--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,11 +9,11 @@
     <item
         android:id="@+id/navigation_sleeptrack"
         android:icon="@drawable/nav_2"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_sleeptrack" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/nav_3"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_profile" />
 
 </menu>
