--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
             android:fontFamily="@font/cormorant_medium"
             android:gravity="center"
             android:paddingTop="15dp"
-            android:text="Sign In"
+            android:text="@string/login"
             android:textColor="@color/black"
             android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="E-mail"
+            android:text="@string/e_mail"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="Please Input your email address"
+            android:hint="@string/email_text"
             android:background="@drawable/rectangle_login"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/black"
             android:layout_marginTop="8dp"
             android:textSize="15sp"
@@ -100,7 +100,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/rectangle_login"
             android:fontFamily="@font/montserrat_regular"
-            android:hint="Please Input your password"
+            android:hint="@string/password_text"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="12sp"
