--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Username"
+            android:text="@string/username"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rectangle_login"
             android:fontFamily="@font/montserrat_regular"
-            android:hint="Please Input your username"
+            android:hint="@string/username_text"
             android:layout_marginTop="8dp"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="E-mail"
+            android:text="@string/email"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
             android:background="@drawable/rectangle_login"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_regular"
-            android:hint="Please Input your email address"
+            android:hint="@string/email_text"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="12sp"
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/black"
             android:layout_marginTop="8dp"
             android:textSize="15sp"
@@ -128,7 +128,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/rectangle_login"
             android:fontFamily="@font/montserrat_regular"
-            android:hint="Please Input your password"
+            android:hint="@string/password_text"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:textSize="12sp"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="Already have an account?"
+            android:text="@string/have_acc"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/button_signin"
@@ -159,7 +159,7 @@
             android:layout_marginTop="25dp"
             android:backgroundTint="@color/blue"
             android:fontFamily="@font/cormorand_semibold"
-            android:text="Sign Up"
+            android:text="@string/signup"
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="20sp"
