--- a/app/src/main/res/layout/item_row_button.xml
+++ b/app/src/main/res/layout/item_row_button.xml
@@ -19,10 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="@string/day"
-            android:textSize="9sp"
+            android:textSize="8sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,6 +31,7 @@
             android:layout_height="wrap_content"
             android:text="@string/date"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
